# optgame

./: .env.example  .gitignore  AJAX_ATUALIZACAO.md  AJAX_DINAMICO_COMPLETO.md  ALTERACOES_FINAIS.md  API_REFERENCE.md  CARDS_RECURSOS_MELHORADOS.md  CHANGELOG.md  CONTRIBUTING.md  CORRECAO_DASHBOARD_ADMIN.md  CORRECAO_GAP_FINAL.md  CORRECAO_GRAFICO_RANKING.md  CORRECAO_OTIMIZADOR.md  CORRECAO_RECURSOS.md  CORRECAO_SECAO_CONSUMO.md  CORRECAO_VALIDACAO_RECURSOS.md  CORRECOES_BUGS_06_10_2025.md  DEBUG_OTIMIZADOR.md  DEBUG_VALIDACAO.md  DEPLOYMENT.md  FIX_ITERACOES_INDEPENDENTES.md  FORMATACAO_NUMEROS.md  FUND A _ simulador_multi_empresas_20250930_115645.json  GRAFICOS_INDIVIDUAIS.md  GUIA_TESTE_RAPIDO.md  IMPLEMENTACAO_AJAX_CSRF_COMPLETA.md  MELHORIAS_DASHBOARD_06_10_2025.md  MELHORIAS_VISUALIZACAO_RECURSOS.md  MODELO_MATEMATICO.md  OTIMIZADOR.md  QUICK_START.md  README.md  README_WEB.md  RESUMO_CORRECOES_COMPLETO.md  RESUMO_IMPLEMENTACAO.md  SCRIPTS_INICIALIZACAO.md  SESSAO_NAO_PERSISTENTE.md  SISTEMA_GAP_OTIMIZACAO.md  SUMMARY.md  TECHNICAL_NOTES.md  (+23 more)
src/: main.py  teste.py
src/config/: __init__.py  constants.py
src/controller/: __init__.py  controller.py
src/data/: __init__.py
src/mecanicas/: __init__.py  mechanics.py
src/saves/: POINT2B.json  save_2025-10-07T00-22-39.json  save_2025-10-07T00-40-23.json  save_2025-10-13T02-47-01.json
src/server/: __init__.py  web_portal.py
src/server/templates/: base.html  empresa_dashboard.html  empresa_login.html  index.html
src/web_app/: __init__.py  game_state.py  optimizer.py  routes.py
(+10 files in other folders)
